[SAM-9076] Add formula matching checkbox options

--- a/src/app/assistance-listing/components/formula-matching/formula-matching.template.html
+++ b/src/app/assistance-listing/components/formula-matching/formula-matching.template.html
@@ -4,4 +4,9 @@
               [hint]="hint"
               [required]="required">
 
+  <samCheckbox [model]="model.checkbox || []"
+               [name]="name + '-checkbox'"
+               [options]="formulaMatchingOptions"
+               (modelChange)="onCheckboxChange($event)"
+  ></samCheckbox>
 </labelWrapper>
