[SAM-9076] Use formControl for formula matching checkbox

--- a/src/app/assistance-listing/assistance-listing-operations/sections/compliance-requirements/compliance-requirements.page.html
+++ b/src/app/assistance-listing/assistance-listing-operations/sections/compliance-requirements/compliance-requirements.page.html
@@ -38,6 +38,8 @@
                            [formControlName]="'formulaMatching'"
   ></falFormulaMatchingInput>
 
+  {{ this.formulaMatchingModel | json}}
+
   <div>
     <div class="pull-left">
       <samButton buttonText="Cancel" (onClick)="onCancelClick($event)"></samButton>
