--- a/src/app/assistance-listing/components/formula-matching/formula-matching.template.html
+++ b/src/app/assistance-listing/components/formula-matching/formula-matching.template.html
@@ -7,6 +7,6 @@
   <samCheckbox [model]="model.checkbox || []"
                [name]="name + '-checkbox'"
                [options]="formulaMatchingOptions"
-               (modelChange)="onCheckboxChange($event)"
+               [formControl]="formulaMatchingControl"
   ></samCheckbox>
 </labelWrapper>
