SAM-8991: award -> procedure

--- a/src/app/assistance-listing/assistance-listing.page.html
+++ b/src/app/assistance-listing/assistance-listing.page.html
@@ -381,7 +381,7 @@
       <h3>Award Procedure:</h3>
 
       <p class="field" id="program-award-procedure">
-        {{program.data?.award?.procedures?.content}}
+        {{program.data?.assistance?.awardProcedure?.description}}
       </p>
 
 
