--- a/src/app/assistance-listing/display-template-demo/demo.page.html
+++ b/src/app/assistance-listing/display-template-demo/demo.page.html
@@ -296,7 +296,7 @@
 
       <sam-subsection title="Award Procedure">
         <p class="field" id="program-award-procedure">
-          {{program.data?.award?.procedures?.content}}
+          {{program.data?.assistance?.awardProcedure?.description}}
         </p>
       </sam-subsection>
 
