--- a/src/styles/components/role-management/_role-managment.scss
+++ b/src/styles/components/role-management/_role-managment.scss
@@ -4,3 +4,6 @@
 @import "role-workspace";
 @import "role-content";
 @import "object-details";
+@import "rolemgmt-workspace";
+@import "rolemgmt-sidenav";
+@import "rolemgmt-content";
