--- a/src/app/organization-detail/create-org/address-form/address-form.template.html
+++ b/src/app/organization-detail/create-org/address-form/address-form.template.html
@@ -1,13 +1,12 @@
 <form [formGroup]="addressForm">
-  <h3 class="m_T-3x" *ngIf="!orgAddrTypeSelected">
-    <samSelect class="org-type-select usa-width-one-half" [(model)]="orgAddrType" [name]="orgAddrSelectConfig.name" [options]="orgAddrSelectConfig.options" [label]="orgAddrSelectConfig.label" [disabled]="orgAddrSelectConfig.disabled" (modelChange)='onAddrTypeSelect($event)'></samSelect>
-    <i class="p_T-3x p_L-3x fa fa-plus-circle org-address-icons" *ngIf="orgAddrTypeSelected" (click)="onAdditionalAddressFormClick()"></i>
+  <h3 class="m_T-3x" *ngIf="!isOrgTypeSelected()">
+    <samSelect class="org-type-select usa-width-one-half" [(model)]="orgAddrModel.addrType" [name]="orgAddrSelectConfig.name" [options]="orgAddrSelectConfig.options" [label]="orgAddrSelectConfig.label" [disabled]="orgAddrSelectConfig.disabled" (modelChange)='onAddrTypeSelect($event)'></samSelect>
     <i class="p_T-3x p_L-3x fa fa-times-circle org-address-icons" (click)="onCancelAddressFormClick()"></i>
   </h3>
-  <h3 class="m_T-3x" *ngIf="orgAddrTypeSelected">
-    <span>{{orgAddrType}}</span>
-    <i class="p_L-3x fa fa-plus-circle org-address-icons" (click)="onAdditionalAddressFormClick()"></i>
-    <i class="p_L-3x fa fa-times-circle org-address-icons" *ngIf="orgAddrType !== 'Mailing Address'" (click)="onCancelAddressFormClick()"></i>
+  <h3 class="m_T-3x" *ngIf="isOrgTypeSelected()">
+    <span>{{orgAddrModel.addrType}}</span>
+    <i class="p_L-3x fa fa-plus-circle org-address-icons" *ngIf="showAddIcon" (click)="onAdditionalAddressFormClick()"></i>
+    <i class="p_L-3x fa fa-times-circle org-address-icons" *ngIf="!isBasicAddressType()" (click)="onCancelAddressFormClick()"></i>
   </h3>
 
   <div class="usa-width-one-whole">
@@ -26,7 +25,7 @@
     <!--<sam-autocomplete county [ngModelOptions]="{standalone: true}" [(ngModel)]="cityOutput" [id]="'create-org-form-city-auto'" [labelText]="''" [config]="locationConfig"></sam-autocomplete>-->
     <!--</labelWrapper>-->
     <!--</div>-->
-    <samText class="usa-width-one-half p_L-2x m_R-0" #MailAddrPostalCode [control]="addressForm.get('postalCode')" formControlName="postalCode" [name]="'zip-input'" [label]="'Postal Code'"></samText>
+    <samText class="usa-width-one-half p_L-2x m_R-0" #MailAddrPostalCode [control]="addressForm.get('postalCode')" formControlName="postalCode" [name]="'zip-input'" [label]="'Postal Code'" [required]='true'></samText>
     <!--<samText class="usa-width-one-half m_R-0" #MailAddrPostalSate [name]="'state-input'" [label]="'State/Province/Region'"></samText>-->
   </div>
 
@@ -34,7 +33,7 @@
 
     <div class="usa-width-one-half m_R-0 p_R-2x">
       <labelWrapper class="p_T-1x org-create-label" [label]="'State'" [name]="'State'" [required]="true">
-        <sam-autocomplete state [ngModelOptions]="{standalone: true}" [(ngModel)]="stateOutput" [id]="'create-org-form-state-auto'" [labelText]="''" [config]="locationConfig"></sam-autocomplete>
+        <sam-autocomplete state [countryModel]="countryOutput" [ngModelOptions]="{standalone: true}" [(ngModel)]="stateOutput" [id]="'create-org-form-state-auto'" [labelText]="''" [config]="locationConfig"></sam-autocomplete>
       </labelWrapper>
     </div>
   </div>
