--- a/src/app/awards/search-result/naics-psc-filter/naics-psc-filter.template.html
+++ b/src/app/awards/search-result/naics-psc-filter/naics-psc-filter.template.html
@@ -6,5 +6,5 @@
                   (modelChange)="emitSelected($event)"
                   [selectedList]="listDisplay.selectedItems">
   </sam-type-ahead>
-  <sam-list-display #listDisplay (modelChange)="emitSelectedList()"><div [innerHTML]="options1.selectedLabel"></div></sam-list-display>
+  <sam-list-display #listDisplay (modelChange)="emitSelectedList()" [config]="options1.config"><div [innerHTML]="options1.selectedLabel"></div></sam-list-display>
 </labelWrapper>
