--- a/src/styles/all.scss
+++ b/src/styles/all.scss
@@ -1,19 +1,93 @@
-@import 'paths';
+/*******************************
+         Global
+*******************************/
 
-// Vendor main
-@import '~font-awesome/scss/font-awesome';
+/*-------------------
+       Helpers
+--------------------*/
 @import '~uswds/src/stylesheets/lib/bourbon';
 @import '~uswds/src/stylesheets/lib/neat';
 
-// Internal variable should be declared before uswds variable to take higher precendence
+/*-------------------
+     Variables
+--------------------*/
+// Internal variable should be declared before uswds 
+// variable to take higher precendence
 @import 'variables';
+@import 'paths';
+
+/*-------------------
+       Reset
+--------------------*/
+@import '~uswds/src/stylesheets/lib/normalize';
+
+/*-------------------
+       Icons
+--------------------*/
+@import '~font-awesome/scss/font-awesome';
+
+
+/*******************************
+        USWDS 0.13.3
+*******************************/
+/*
+  Vendor scss files moved to the top
+  of this file to be used by all files
+*/
+
+//@import '~uswds/src/stylesheets/lib/bourbon';
+//@import '~uswds/src/stylesheets/lib/neat';
+//@import '~uswds/src/stylesheets/lib/normalize';
+
+
+// Core -------------- //
+
+@import '~uswds/src/stylesheets/core/variables';
+@import '~uswds/src/stylesheets/core/fonts';
+@import '~uswds/src/stylesheets/core/base';
+@import '~uswds/src/stylesheets/core/grid';
+@import '~uswds/src/stylesheets/core/utilities';
+
+
+// Elements -------------- //
+// Styles basic HTML elements
+
+@import '~uswds/src/stylesheets/elements/buttons';
+@import '~uswds/src/stylesheets/elements/figure';
+@import '~uswds/src/stylesheets/elements/inputs';
+@import '~uswds/src/stylesheets/elements/labels';
+@import '~uswds/src/stylesheets/elements/list';
+@import '~uswds/src/stylesheets/elements/table';
+@import '~uswds/src/stylesheets/elements/typography';
+
+
+// Components -------------- //
+
+@import '~uswds/src/stylesheets/components/accordions';
+@import '~uswds/src/stylesheets/components/alerts';
+//@import '~uswds/src/stylesheets/components/banner';
+//@import '~uswds/src/stylesheets/components/footer';
+@import '~uswds/src/stylesheets/components/forms';
+//import '~uswds/src/stylesheets/components/graphic-list';
+//@import '~uswds/src/stylesheets/components/hero';
+//@import '~uswds/src/stylesheets/components/layout';
+//@import '~uswds/src/stylesheets/components/media-block';
+//@import '~uswds/src/stylesheets/components/section';
+@import '~uswds/src/stylesheets/components/sidenav';
+//@import '~uswds/src/stylesheets/components/header';
+@import '~uswds/src/stylesheets/components/search';
+//@import '~uswds/src/stylesheets/components/skipnav';
+
+
+/*******************************
+        Legacy 
+*******************************/
+
 @import 'utilities';
 @import 'margin-padding';
 @import 'global';
 @import 'typography';
 @import 'grid-offsets';
-
-@import '~uswds/src/stylesheets/uswds';
 
 @import 'components/parent-orgs.scss';
 @import 'components/card';
