--- a/src/app/search/search.template.html
+++ b/src/app/search/search.template.html
@@ -175,7 +175,7 @@
         </sam-collapsible>
 
         <!--NAICS - PSC Filters-->
-        <sam-collapsible [label]="'Service Classifications'" [startOpened]="true" *ngIf="index==='fpds'">
+        <sam-collapsible [label]="'Service Classifications'" [startOpened]="true" *ngIf="index==='fpds' || index === 'opp' || index === 'ent'">
           <sam-naics-psc-filter class="usa-award-radio"
                                 [selectModel1]="naicsTypeModel"
                                 [options1]="naicsType"
