--- a/src/app/application-content/home/home.template.html
+++ b/src/app/application-content/home/home.template.html
@@ -1,191 +1,126 @@
-<div class="usa-grid-full -home">
 
-  <!--Introduction to the sam.gov website-->
-  <div class="usa-grid ">
-      <div class="usa-width-one-whole">
-
-        <p class="m_0 p_T-6x centered">
-          SAM.gov is the official U.S. government website for people who make, receive, and track federal awards.
-        </p>
-        <div class="usa-width-three-fourths marginCenter">
-          <div class="usa-width-one-half m_R-0 m_T-1x m_B-6x">
-            <ul>
-              <li>100% Free to Use</li>
-              <li>Free to Register</li>
-            </ul>
-          </div>
-          <div class="usa-width-one-half m_T-1x m_B-6x">
-            <ul>
-              <li>Free to Search</li>
-              <li>Free to Run Reports</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-  </div>
-
-  <!--search bar-->
-
-  <div class="usa-grid-full marginCenter m_T-6x">
-    <samSearchbar #searchbar [size]="'large'" [selectConfig]="searchSelectConfig" (onSearch)="runSearch($event)">
-      <div custom-input>
-        <samInputAutocomplete
-          [serviceName]="'suggestions'"
-          [index]="searchbar.filterValue"
-          (searchTermEmit)="searchbar.callSearch($event)"
-          (keyEnterEmit)="searchbar.onSearchClick()">
-        </samInputAutocomplete>
-      </div>
-    </samSearchbar>
-  </div>
-
-  <!--Browser topics and the register button-->
-  <div class="usa-grid-full row m_T-6x">
-
-    <!--Temporary Browse Topics-->
-    <div class="usa-width-one-whole">
-      <div class="usa-grid-full">
-
-        <div class="usa-grid-full">
-          <div class="pull-left">
-            <h2>Browse Topics</h2>
-          </div>
-        </div>
-
-        <!--Origin Format of Four Topics along with images-->
-        <div class="usa-width-one-whole m_T-3x">
-          <div class="usa-width-one-fourth" *ngFor="let item of topicsData">
-            <div class="usa-width-one-whole">
-              <div class="usa-width-one-half topic-div-marginCenter topic-image-link">
-                <a (click)="selectTopic(item)"><img src="src/assets/img/blank_icon.png" [attr.alt]="item.title" [attr.tabindex]="0" (keyup.enter)="selectTopic(item)"></a>
-              </div>
+<!--   Search -->
+<div class="sam-ui padded grid">
+  <div class="dark grey row">
+    <div class="sam-ui text container">
+      <div class="sam-ui very padded grid">
+        <div class="column">
+          <samSearchbar #searchbar [size]="'large'" [selectConfig]="searchSelectConfig" (onSearch)="runSearch($event)">
+            <div custom-input>
+              <samInputAutocomplete
+                [serviceName]="'suggestions'"
+                [index]="searchbar.filterValue"
+                (searchTermEmit)="searchbar.callSearch($event)"
+                (keyEnterEmit)="searchbar.onSearchClick()">
+              </samInputAutocomplete>
             </div>
-            <div class="usa-width-one-whole">
-              <h5 class="m_0 centered"><a class="topic-title" (click)="selectTopic(item)">{{item.title}}</a></h5>
-            </div>
-          </div>
+          </samSearchbar>
         </div>
-      </div>
-    </div>
-
-    <!--Long Term Browse Topics, Hide for now-->
-    <div class="usa-width-one-half" *ngIf="false" >
-      <div class="usa-grid-full">
-
-        <div class="usa-grid-full ">
-            <h2 class="centered">Browse Topics</h2>
-        </div>
-
-        <!--Origin Format of Four Topics along with images-->
-        <div class="usa-width-one-whole m_B-6x vertical-line" *ngIf="!showDetail">
-            <div class="usa-width-one-half m_R-0 m_T-4x" *ngFor="let item of topicsData">
-              <div class="usa-width-one-whole">
-                <div class="usa-width-one-third topic-img-link">
-                  <a (click)="selectTopic(item)"><img src="src/assets/img/blank_icon.png" [attr.alt]="item.title"></a>
-                </div>
-              </div>
-              <div class="usa-width-one-whole">
-                <h5 class="m_0 centered"><a class="topic-title" (click)="selectTopic(item)">{{item.title}}</a></h5>
-              </div>
-            </div>
-        </div>
-
-        <!--Selected Format of Four Topics along with images, shows up when a link is selected-->
-        <div class="usa-width-one-whole m_B-6x vertical-line" *ngIf="showDetail">
-
-          <!--Selected Image with detail explanation shows up-->
-          <div class="usa-grid-full m_T-4x">
-            <div class="usa-width-one-sixth">
-              <div class="usa-width-one-whole">
-                <img src="src/assets/img/blank_icon.png" [attr.alt]="curTopic.title">
-                <h5 class="m_0 centered"><a class="topic-title" (click)="selectTopic(item)">{{curTopic.title}}</a></h5>
-              </div>
-            </div>
-            <div class="usa-width-five-sixths topic-details topic-detail">
-
-              <div class="usa-width-one-whole">
-                <div class="usa-width-five-sixths">
-                  <span>{{curTopic.detail}} <a [routerLink]="[curTopic.url]">here</a>.</span>
-                </div>
-                <div class="usa-width-one-sixth">
-                  <span class="pull-right">
-                    <a (click)="closeTopicDetail()"><i class="fa fa-times-circle"></i></a>
-                  </span>
-                </div>
-              </div>
-
-            </div>
-          </div>
-
-          <div class="usa-grid-full m_T-6x">
-            <div class="usa-width-one-third m_R-0" *ngFor="let item of topicsData">
-              <div class="usa-width-one-whole"  *ngIf="item.title != curTopicTitle">
-                <div class="usa-width-one-whole">
-                  <div class="usa-width-one-half topic-img-link">
-                    <a (click)="selectTopic(item)"><img src="src/assets/img/blank_icon.png" [attr.alt]="item.title"></a>
-                  </div>
-                </div>
-                <div class="usa-width-one-whole">
-                  <h5 class="m_0 centered"><a class="topic-title" (click)="selectTopic(item)">{{item.title}}</a></h5>
-                </div>
-              </div>
-            </div>
-
-          </div>
-        </div>
-
-      </div>
-
-    </div>
-
-    <!--Register Button, Hide for now-->
-    <div class="usa-width-one-half relative" *ngIf="false">
-
-      <div class="usa-width-one-whole register-div m_R-6x">
-        <div class="usa-width-one-whole">
-          <div class="pull-right wrap-content">
-            <button class="usa-button-secondary pull-right">Register</button>
-          </div>
-          <div class="pull-right wrap-content">
-            <h3 class="pull-right m_T-3x m_R-3x">Register your Entity</h3>
-
-          </div>
-        </div>
-        <div class="usa-width-one-whole m_T-3x">
-          <h3 class="pull-right">Update your entity registration &nbsp;<i class="fa fa-angle-double-right"></i></h3>
-        </div>
-        <div class="usa-width-one-whole m_T-3x">
-          <h3 class="pull-right">Check your entity registration status &nbsp;<i class="fa fa-angle-double-right"></i></h3>
-        </div>
-      </div>
-
-    </div>
-  </div>
-
-  <!--Temporary Solution for Selected Format of Four Topics along with images, shows up when a link is selected-->
-  <div class="usa-width-one-whole relative m_B-6x" *ngIf = "showDetail">
-
-    <!--Triangle div to point out which topic detail is currently showing-->
-    <div class="usa-width-one-whole tri-div">
-      <div class="usa-width-one-fourth" [ngClass]="setClasses(i)" *ngFor="let item of topicsData; let i = index"></div>
-    </div>
-    <!--Selected Image with detail explanation shows up-->
-    <div class="usa-width-one-whole m_T-4x topic-detail">
-      <div class="usa-width-one-whole ">
-        <span class="pull-right">
-          <a class="dismiss-detail" (click)="closeTopicDetail()" (keyup.enter)="closeTopicDetail()" tabindex="0">
-            <i class="fa fa-times-circle"></i>
-            <span class="sr-only">dismiss detail</span>
-          </a>
-        </span>
-      </div>
-      <div class="usa-width-one-whole">
-        <span *ngIf="linkToggle() || !curTopic.pageInProgress">{{curTopic.detail}}<a [routerLink]="[curTopic.url]">here</a>.</span>
-        <span *ngIf="!linkToggle() && curTopic.pageInProgress">{{curTopic.inProgressDetail}}</span>
-
       </div>
     </div>
   </div>
+</div>
 
+<!--  Intro Text -->
+<div class="sam-ui text container">
+  <div class="sam-ui vertically very padded center aligned grid">
+    <div class="column">
+      <h2 class="sam-ui light header">
+        SAM.gov is the official U.S. government website for people who make, 
+        receive, and track federal awards.
+      </h2>
+    </div>
+  </div>
+</div>
 
+<!-- Images -->  
+<div class="sam-ui container">
+  <div class="sam-ui grid images-section">
+    <div class="column center aligned">
+      <img class="sam-ui image" src="src/assets/img/home-main.jpg">
+    </div>
+  </div>
+</div>
+
+<!--  Free Banner  -->
+ <div class="sam-ui container">
+   <div class="sam-ui center aligned padded grid">
+     <div class="light blue row">
+       <div class="column">
+         <ul class="sam-ui horizontal bulleted large list">
+           <li class="item">100% Free to Use</li>
+           <li class="item">Free to Search</li>
+           <li class="item">Free to Run Reports</li>
+           <li class="item">Free to Register</li>
+         </ul>
+       </div>
+     </div>
+   </div>
+</div> 
+
+<!-- Main Content -->
+<div class="sam-ui container">
+  <div class="sam-ui vertically very padded stackable grid">
+    <div class="twelve wide tablet four wide computer column">      
+      <div class="sam-ui horizontally padded grid">      
+        <div class="row">
+          <div class="column">
+            <button class="sam-ui big dark blue fluid button">
+              <i class="icon fa fa-map-marker"></i>
+              New to SAM.gov
+            </button>
+          </div>
+        </div>
+        <div class="row">
+          <div class="column">
+            <button class="sam-ui big dark blue fluid button">
+              <i class="icon fa fa-user"></i>
+              User Accounts
+            </button>
+          </div>
+        </div>
+        <div class="row">
+          <div class="column">
+            <button class="sam-ui big dark blue fluid button">
+              <i class="icon fa fa-map-signs"></i>
+              Sam.gov Transition Roadmap
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="twelve wide tablet eight wide computer column">
+      <div class="sam-ui two column stackable padded grid">
+        <div class="column">
+          <h2><i class="fa fa-line-chart" aria-hidden="true"></i> Award Data</h2>
+          <p>
+            Gain access to data in a variety of formats. Perform searches, download extracts, and retrieve data through web services.
+          </p>
+          <a href="">Learn more about SAM.gov data sets</a>
+        </div>
+        <div class="column">
+          <h2><i class="fa fa-book" aria-hidden="true"></i> Quick Start Guides</h2>
+          <p>
+            If you've used one of the following systems, click below to learn how to do the same things in beta.sam.gov.
+          </p>
+          <div class="sam-ui two column grid">
+            <div class="column">
+              <ul class="sam-ui bulleted list">
+                <li><a href="">WDOL</a></li>
+                <li><a href="">SPDS</a></li>
+                <li><a href="">SAM</a></li>
+              </ul>
+            </div>
+            <div class="column">
+              <ul class="sam-ui bulleted list">
+                <li><a href="">CFDA</a></li>
+                <li><a href="">FDO</a></li>
+                <li><a href="">Federal Hierarchy</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>  
+      </div>
+    </div>
+  </div>
 </div>
