--- a/src/app/role-management/rolemgmt-workspace.page.html
+++ b/src/app/role-management/rolemgmt-workspace.page.html
@@ -1,8 +1,17 @@
 <div class = "rolemgmt-workspace usa-grid-full">
   <div class = "usa-width-one-fourth m_W-3em">
-    <rolemgmt-sidenav></rolemgmt-sidenav>
+    <rolemgmt-sidenav
+      (statusSelected) = "StatusValue($event)"
+      (domainSelected) = "DomainValue($event)"
+      (autoCompleteSelected) = "AutoCompleteValue($event)"
+    >
+    </rolemgmt-sidenav>
   </div>
   <div class = "usa-width-three-fourths m_W-3em">
-    <rolemgmt-content></rolemgmt-content>
+    <rolemgmt-content
+      (sortOrder) = "SortValue($event)"
+      (pageNumber) = "PageValue($event)"
+    >
+    </rolemgmt-content>
   </div>
 </div>
